fixed known layout bugs,  added video  in carousel

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "salsa";
+  src: url("./assets/fonts/salsa-regular-webfont.woff2") format("woff2"),
+    url("./assets/fonts/salsa-regular-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 a:hover,
 a:visited,
 a:link,
@@ -12,6 +19,7 @@ p {
   font-weight: 300;
 }
 h3 {
+  font-family: salsa;
   text-transform: uppercase;
   font-weight: 600;
   margin-bottom: 40px;
@@ -38,7 +46,9 @@ input[type="submit"],
   -webkit-appearance: none;
   border-radius: 0;
 }
-
+.container {
+  overflow-x: hidden;
+}
 .navbar-brand img {
   height: 45px;
   transition: all 300ms ease-in-out;
@@ -70,12 +80,15 @@ input[type="submit"],
   transition: color 200ms ease-in-out, border-color 200ms ease;
 }
 .navbar-light .navbar-nav .nav-link:focus,
-.navbar-light .navbar-nav .nav-link:hover,
-.navbar-light .navbar-nav .nav-link.active {
+.navbar-light .navbar-nav .nav-link:hover {
   color: #14b8ca;
 }
 .navbar-light .navbar-nav .nav-link.active {
-  border-bottom: 2px solid #14b8ca;
+  color: #1292a0;
+  /* text-shadow: 0 1px 2px #24333bcc; */
+}
+.navbar-light .navbar-nav .nav-link.active {
+  border-bottom: 2px solid #1292a0;
 }
 
 @media (min-width: 992px) {
@@ -154,6 +167,7 @@ input[type="submit"],
 /* End Ham Styling */
 
 .carousel {
+  font-family: salsa;
   position: relative;
   text-align: center;
   padding-top: 76px;
@@ -175,6 +189,26 @@ input[type="submit"],
   width: 65vw;
   transform: translate(-60%, 20%);
   transition: opacity 800ms 300ms ease-in, transform 600ms ease;
+}
+.carousel-label--hero {
+  position: absolute;
+  font-size: 50px;
+  font-weight: 600;
+  letter-spacing: 0.1em;
+  opacity: 0;
+  top: 50%;
+  left: 50%;
+  width: 80vw;
+  transform: translate(-50%, -50%);
+  transition: opacity 800ms 300ms ease-in, transform 600ms ease;
+  text-shadow: 3px 3px 5px #24333bcc;
+  /* 0px 4px 6px rgba(14, 130, 143, 0.7); */
+}
+.carousel-label--hero span {
+  display: inline-block;
+  font-size: 25px;
+  font-weight: 400;
+  letter-spacing: initial;
 }
 @media (min-width: 375px) {
   .navbar-brand img {
@@ -201,6 +235,10 @@ input[type="submit"],
   .navbar-light .navbar-text a {
     font-size: 1.3em;
   }
+  .carousel-label--hero span {
+    font-size: 30px;
+    transform: translateY(-50%);
+  }
 }
 @media (min-width: 768px) {
   .nav-item::after {
@@ -216,6 +254,28 @@ input[type="submit"],
   opacity: 1;
   transform: translate(-50%, 20%);
 }
+.slick-active .carousel-label--hero {
+  opacity: 1;
+}
+.video--back {
+  width: 100%;
+  height: 100%;
+  background-color: #7fe0e7;
+  background-image: linear-gradient(0deg, #427a7e 0%, #7fe0e7 100%);
+}
+
+video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  filter: sepia(1) saturate(1.5) hue-rotate(-225deg) brightness(0.75);
+  /* filter: brightness(0.8); */
+}
 
 /* Needed to be 100% for carousel img to properly size */
 .slick-list,
@@ -229,6 +289,11 @@ input[type="submit"],
   object-fit: cover;
 }
 
+.slick-prev,
+.slick-next {
+  height: 80px;
+  width: 40px;
+}
 .slick-prev {
   font-size: 3em;
   z-index: 1;
@@ -256,12 +321,14 @@ input[type="submit"],
 }
 .slick-prev::before,
 .slick-next::before {
+  position: absolute;
   font-size: 60px;
-  line-height: unset;
+  top: 0;
   text-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
 }
 .slick-next::before {
   content: "⟩";
+  left: 0;
 }
 .slick-prev::before {
   content: "⟨";
@@ -319,12 +386,6 @@ section img:not(.flag-icon) {
 
 .dark {
   background-color: #f5f8fb;
-  /* width: 100vw;
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw; */
 }
 
 .contact-info img {
@@ -490,9 +551,9 @@ footer {
   background-color: #14b8ca;
 }
 .copyright {
-  font-size: 14px;
+  font-size: 10px;
   font-weight: 300;
-  font-variant-caps: small-caps;
+  /* font-variant-caps: petite-caps; */
   color: grey;
 }
 .copyright a {
